--- a/.github/workflows/build-original.yml
+++ b/.github/workflows/build-original.yml
@@ -10,9 +10,13 @@
 name: OpenWrt-CI-original
 
 on:
-  push:
-    branches: 
-      - master
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
   # schedule:
   #   - cron: 0 20 * * *
   # release:
