--- a/.github/workflows/build-original.yml
+++ b/.github/workflows/build-original.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          ref: master
+          ref: build
 
       - name: Space cleanup
         env:
